...
fun ListUsers(
    mainViewModel: MainViewModel,
    users: List<User>
) {
    val listState = rememberLazyListState()

    LazyColumn(
        modifier = Modifier.testTag("LazyColumn"),
        state = listState
    ) {
        items(
            items = users,
            key = { it.uuid }
...

@Composable
fun DisplayError(
    message: String
) {
    Column(
        modifier = Modifier.testTag("Error"),
    ) {
        Image(
            modifier = Modifier.padding(24.dp),
            painter = painterResource(id = R.drawable.error),
            contentDescription = stringResource(id = R.string.error_image)
        )
...
