...
    Column {

        OutlinedTextField(
            modifier = Modifier
                .fillMaxWidth()
                .padding(10.dp)
                .testTag("TextField"),
            value = url,
            onValueChange = { url = it },
            trailingIcon = {
                Icon(
                    imageVector = Icons.Default.Clear,
                    contentDescription = stringResource(id = R.string.clear_text),
                    modifier = Modifier
                        .clickable { url = "" }
                        .testTag("TextFieldClear")
                )
            },
            keyboardOptions = KeyboardOptions.Default.copy(
                imeAction = ImeAction.Done
            ),
            keyboardActions = KeyboardActions(
...
